# personal-healthcare-ai

./: .gitignore  CMakeLists.txt  main.cpp
parser/utils/: check.py  models.py  parser_image.py
src/: main.cpp
